@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' Define only the entities used in this diagram
entity facility {}
entity facility_role {}
entity facility_type {}
entity facility_contact_mechanism {}
entity facility_role_type {}
entity party {}
entity contact_mechanism {}

facility ||..|{ facility_role
facility ||..|{ facility_type
facility "madeUpOf" ||..|{ "partOf" facility
facility ||..|{ facility_contact_mechanism

facility_role ||..|{ facility_role_type
facility_role ||..|{ party

facility_contact_mechanism }|..|| contact_mechanism


@enduml
